--- a/src/app/shared/modal-profile/modal-profile.component.scss
+++ b/src/app/shared/modal-profile/modal-profile.component.scss
@@ -10,6 +10,14 @@ button:disabled {
     cursor: not-allowed;
 }
 
+.my-mood {
+    display: contents;
+}
+
+.my-mood img {
+    width: 60px !important;
+}
+
 
 /* HIDE RADIO */
 
