--- a/src/assets/sass/scss/core/_sidebar-content.scss
+++ b/src/assets/sass/scss/core/_sidebar-content.scss
@@ -111,13 +111,11 @@
         z-index: 4;
     }
     .logo-img {
-        width: 130px;
-        display: inline-block;
+        display: inline;
         max-height: 30px;
         margin-right: 15px;
         img {
-            width: 145px;
-            height: 80px;
+            width: 150px;
         }
     }
     .logo-tim {
@@ -179,7 +177,7 @@
                 padding: 10px 30px 10px 14px;
                 margin: 5px 0;
                 background-color: transparent;
-                color: $black;
+                color: $white;
                 transition: all 300ms linear;
                 &:before {
                     content: '';
@@ -422,6 +420,11 @@
 }
 
 .sidebar-header {
+    h4 {
+        white-space: normal !important;
+        text-align: center !important;
+        color: $white;
+    }
     a.nav-toggle {
         display: inline-block;
         position: absolute;
