--- a/src/app/pages/full-pages/goals/card-text/card-text.component.html
+++ b/src/app/pages/full-pages/goals/card-text/card-text.component.html
@@ -1,12 +1,22 @@
-<!-- Card for normal content -->
-<div class="card-content">
-    <img class="card-img-top img-fluid" [src]="post.imageUrl? (post.imageUrl | safe: 'url') :   './assets/img/photos/06.jpg'" alt="Card image cap">
-    <div class="card-body">
-        <h4 class="card-title" *ngIf="post.title" [innerHtml]="post.title | safe: 'html'"></h4>
-        <p class="card-text" *ngIf="post.shortContent" [innerHtml]="(post.shortContent | safe: 'html')">...</p>
-        <a class="btn btn-outline-warning" data-toggle="modal" data-target="#articleContent" (click)=" open(articleContent)">Read
-            full article</a>
-    </div>
+<!-- Card for text, audio and video content -->
+<!-- <div class="card-content">
+    <a class="card-content-click" data-toggle="modal" [style.background-image]="'url(' + post.imageUrl +')' | safe:'style'" data-target="#articleContent" (click)=" open(articleContent)">
+
+        <h4 class="card-title" *ngIf="post.title" [innerHtml]="post.title | safe: 'html'"></h4> -->
+<!-- <p class="card-text" *ngIf="post.shortContent" [innerHtml]="(post.shortContent | safe: 'html')">...</p> -->
+<!-- </a>
+</div> -->
+
+<div class="card-content bg-dark text-white text-center align-text-top">
+    <a (click)=" open(articleContent)">
+        <img class="card-img-top" [src]="post.imageUrl? (post.imageUrl | safe: 'url' ):   './assets/img/photos/06.jpg'" alt="Card image">
+        <div class="card-img-overlay">
+            <h4 class="card-title" *ngIf="post.title" [innerHtml]="post.title | safe: 'html'"></h4>
+        </div>
+        <div class="middle">
+            <div class="text">Read more</div>
+        </div>
+    </a>
 </div>
 
 <ng-template #articleContent let-modal>
@@ -16,13 +26,14 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="modal-body">
-        <!-- <img class="card-img-top img-fluid" [src]="post.imageUrl? (post.imageUrl | safe: 'url' ):   './assets/img/photos/06.jpg'" alt="Card image cap"> -->
-        <audio *ngIf="post.audioUrl" controls>
-            <source [src]="post.audioUrl | safe: 'url'" type="audio/mp3">
-            Your browser does not support the audio element.
-        </audio>
-        <p class="card-text" *ngIf="post.content" [innerHtml]="post.content | safe: 'html'"></p>
-
+    <div class="container">
+        <div class="modal-body">
+            <!-- <img class="card-img-top img-fluid" [src]="post.imageUrl? (post.imageUrl | safe: 'url' ):   './assets/img/photos/06.jpg'" alt="Card image cap"> -->
+            <audio *ngIf="post.audioUrl" controls>
+                <source [src]="post.audioUrl | safe: 'url'" type="audio/mp3">
+                Your browser does not support the audio element.
+            </audio>
+            <p class="card-text" *ngIf="post.content" [innerHtml]="post.content | safe: 'html'"></p>
+        </div>
     </div>
 </ng-template>
