--- a/src/app/pages/full-pages/goals/goals-page.component.html
+++ b/src/app/pages/full-pages/goals/goals-page.component.html
@@ -26,7 +26,7 @@
         <div class="col-sm-12 col-md-6">
             <div class="content-header">Wellbeing</div>
             <div class="row">
-                <div class="card col-4" *ngFor="let article of(articles$ |async) ">
+                <div class="card col-12 col-md-6 col-lg-4" *ngFor="let article of(articles$ |async) ">
                     <app-card-text [post]="article">
                     </app-card-text>
                 </div>
