--- a/src/app/pages/full-pages/goals/single-goal-card/single-goal-card.component.html
+++ b/src/app/pages/full-pages/goals/single-goal-card/single-goal-card.component.html
@@ -1,8 +1,8 @@
 <ng-template [ngIf]="goal">
-    <div class="card">
-        <div class="card-header p-2">
+    <div class="card" [id]="'gc-'+goal.id">
+        <div class="card-header p-2" [ngClass]=" goal.status === 1 ? 'goal-done': 'text-muted'">
             <!-- <div id="headingCollapse14" class="card-header pb-3"> -->
-            <a class="card-title lead collapsed text-muted" [attr.aria-expanded]="!isGoalCollapsed" aria-controls="'g-'+ goal.id" (click)="isGoalCollapsed=!isGoalCollapsed">
+            <a class="card-title lead collapsed" [attr.aria-expanded]="!isGoalCollapsed" [attr.aria-controls]="'g-' + goal.id" (click)="isGoalCollapsed=!isGoalCollapsed">
                 {{goal.title}}
                 <span class="float-right">
                     <!-- fa fa-caret-down -->
