--- a/src/assets/sass/scss/bootstrap/_modal.scss
+++ b/src/assets/sass/scss/bootstrap/_modal.scss
@@ -11,3 +11,14 @@
         }
     }
 }
+
+// .modal>.modal-dialog {
+//     width: 100% !important;
+//     padding: 0;
+// }
+// .modal>.modal-dialog>.modal-content {
+//     height: auto;
+//     min-height: 100%;
+//     width: 100% !important;
+//     border-radius: 0;
+// }
