--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,22 @@
     opacity: 1;
 }
 
+.modal>.modal-dialog {
+    width: 100% !important;
+    padding: 0;
+    max-width: 80% !important;
+}
+
+.modal>.modal-dialog>.modal-content {
+    height: auto;
+    min-height: 100%;
+    width: 100% !important;
+    border-radius: 0;
+}
+
+
+/*  */
+
 
 /* ,
 "proxyConfig": "proxy.conf.json" */
